welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:10: error: ';' expected but 'else' found.
else{
^blueTicket:15: error: Unmatched closing brace '}' ignored here
 }
 ^