welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
d=a+b
e=a+c
f=b+c
if (d==10 || e==10 || f==10){
	return 10 ;
} else if 	(d==10 && (e=10 || f==10) )
return 5 }

else{
return 0
} 
}
